--- a/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Orders.report.xml
+++ b/trunk/framework.report/test/org/plazmaforge/framework/report/resources/reports/Orders.report.xml
@@ -7,6 +7,7 @@
 		<variable name="CountryGroupSum" data-type="Double" aggregation="SUM" reset-type="Group" reset-name="CountryGroup"><expression>$F{Freight}</expression></variable>
 		<variable name="CountryPageCount" data-type="Integer" aggregation="COUNT" reset-type="Page"/>
 		<variable name="CountryPageSum" data-type="Double" aggregation="SUM" reset-type="Page"><expression>$F{Freight}</expression></variable>
+		<variable name="CountryPageDateMax" data-type="date" aggregation="MAX" reset-type="Page"><expression>$F{OrderDate}</expression></variable>
 	</variables>
 	<data-sources>
 		<data-source>
@@ -38,7 +39,7 @@
 				<column width="80" />
 				<column width="350" />
 				<column width="80" />
-				<column width="80" />
+				<column width="100" />
 				<column width="80" />
 			</columns>
 			<report-groups>
@@ -47,9 +48,15 @@
 					<bands>
 						<band type="GroupHeader">
 							<rows>
+								<row height="5">
+									<cells><cell colspan="5"></cell></cells>
+								</row>
 								<row height="25" cell-border-bottom="1">
 									<cells>
 										<cell colspan="5" font="12, bold" ><expression>$F{ShipCountry}</expression></cell>
+										<!-- <cell format="dd/MM/yyyy" colspan="2" font="12, bold" ><expression>$V{CountryPageDateMax}</expression></cell> -->
+										<!-- EEE, MMM d, yyyy -->
+										<!-- <cell colspan="2" font="12, bold" ><expression>$V{CountryPageCount}</expression></cell> -->
 									</cells>
 								</row>
 							</rows>
@@ -61,7 +68,8 @@
 								</row>
 								<row height="20" background="#C0C0C0">
 									<cells>
-										<cell colspan="2" horizontal-align="right"><value>Count:</value></cell>
+									    <cell format="dd/MM/yyyy" vertical-align="middle" font="8, bold" ><expression>$V{CountryPageDateMax}</expression></cell>
+										<cell horizontal-align="right"><value>Count:</value></cell>
 										<cell horizontal-align="right"><expression>$V{CountryGroupCount}</expression></cell>
 										<cell horizontal-align="right"><value>Total:</value></cell>
 										<cell format="0.00" horizontal-align="right"><expression>$V{CountryGroupSum}</expression></cell>
@@ -75,27 +83,16 @@
 
 			
 			<bands>
-			<!-- 
-				<band type="ReportHeader" cell-line="none">
+				<band type="ReportHeader">
 					<rows>
-						<row height="30" background="red">
+						<row height="30" cell-border-top="1">
 							<cells>
-								<cell colspan="4" horizontal-align="center" vertical-align="middle" font="16"><value>My Report</value></cell>
-							</cells>
-						</row>
-						<row height="15">
-							<cells>
-								<cell padding-left="20" colspan="4" font="bold|italic"><expression>"PRICE_LIMIT: "  + $P{PRICE_LIMIT}</expression></cell>
-							</cells>
-						</row>
-						<row height="15">
-							<cells>
-								<cell padding-left="20" colspan="4" foreground="green"><expression>"FULL_PRODUCT_NAME: "  + $V{FULL_PRODUCT_NAME}</expression></cell>
+								<cell colspan="5" horizontal-align="center" vertical-align="middle" font="18, bold"><value>Order List</value></cell>
 							</cells>
 						</row>
 					</rows>
 				</band>
-		 -->		
+	
 				<band type="ColumnHeader">
 					<rows>
 						<row height="20" background="#333333" foreground="#FFFFFF">
@@ -111,12 +108,13 @@
 				</band>
 				<band type="Detail">
 					<rows>
-						<row height="20" cell-border-bottom="0.5">
+						<row height="20" cell-border-bottom="1">
 							<cells>
 								<cell><expression>$F{OrderID}</expression></cell>
 								<cell><expression>$F{ShipName} + ", " + $F{ShipCity}</expression></cell>
 								<cell><expression>$F{ShipRegion}</expression></cell>
 								<cell format="dd/MM/yyyy"><expression>$F{OrderDate}</expression></cell>
+								<!-- <cell><expression>$V{CountryPageCount}</expression></cell>   -->
 								<cell format="0.00" horizontal-align="right"><expression>$F{Freight}</expression></cell>
 							</cells>
 						</row>
@@ -149,7 +147,9 @@
 					<rows>
 						<row height="20">
 							<cells>
-								<cell colspan="5"  horizontal-align="right"><expression>"Page: " + $V{PAGE_NO}</expression></cell>
+								<cell colspan="2" horizontal-align="right"><value>Count:</value></cell>
+								<cell horizontal-align="right"><expression>$V{CountryPageCount}</expression></cell>
+								<cell colspan="2"  horizontal-align="right"><expression>"Page: " + $V{PAGE_NO}</expression></cell>
 							</cells>
 						</row>
 					</rows>
