--- a/framework.uwt/docs/guide/css/style.css
+++ b/framework.uwt/docs/guide/css/style.css
@@ -42,13 +42,22 @@ pre .cmt {
 
 .grid-th {
 	text-align: left;
-	border: 2px #e1e1e8;
+  border-top: 2px solid #aeaec1; 
+  /*border-bottom: 2px solid #e1e1e8;*/
+  border-left: 1px solid #e1e1e8;
+  border-right: 1px solid #e1e1e8;
 }
 
 .grid-cell {
 	border: 1px solid #e1e1e8;
 }
 
+.grid-cell-group {
+  border-top: 2px solid #aeaec1; 
+  border-bottom: 1px solid #e1e1e8;
+	border-left: 1px solid #e1e1e8;
+	border-right: 1px solid #e1e1e8;
+}
 
 
 pre.prettyprint {
